--- a/style.css
+++ b/style.css
@@ -104,14 +104,21 @@ a{
     align-items: stretch;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.12);
 }
+
+.user-descript {
+    max-width: 300px;
+}
+
 .p-description {
     font-weight: bold;
     margin-right: 5px;
 }
+
 #userAvatar {
     max-width: 225px;
     max-height: 220px;
     margin-right: 20px;
+    border-radius: 4px;
 }
 
 #user-info h2{
